--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -120,13 +120,15 @@ spring:
   security:
     oauth2:
       client:
-        provider:
-          oidc:
-            issuer-uri: http://localhost:9080/auth/realms/jhipster
         registration:
-          oidc:
-            client-id: web_app
-            client-secret: web_app
+          azure:
+            client-id: ${OAUTH_CLIENTID}
+            client-secret: ${OAUTH_CLIENTSECRET}
+
+azure:
+  activedirectory:
+    tenant-id: ${AZURE_TENANTID}
+    active-directory-groups: ROLE_ADMIN, ROLE_USER
 
 server:
   servlet:
