Switch from AAD to AAD B2C

--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -58,6 +58,18 @@ spring:
   thymeleaf:
     cache: true
 
+azure:
+  activedirectory:
+    b2c:
+      tenant: tableofprizes
+      oidc-enabled: true
+      client-id: ${OAUTH_CLIENTID}
+      client-secret: ${OAUTH_CLIENTSECRET}
+      reply-url: https://www.prijzentafel.nl:8080/login/oauth2/code
+      logout-success-url: https://www.prijzentafel.nl:8080/
+      user-flows:
+        sign-up-or-sign-in: B2C_1_signupsignin
+
 # ===================================================================
 # To enable TLS in production, generate a certificate using:
 # keytool -genkey -alias tableofprizes -storetype PKCS12 -keyalg RSA -keysize 2048 -keystore keystore.p12 -validity 3650
@@ -125,3 +137,4 @@ jhipster:
 # ===================================================================
 
 # application:
+
