--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,8 @@
         <!-- Custom -->
         <dependency>
             <groupId>com.microsoft.azure</groupId>
-            <artifactId>azure-active-directory-spring-boot-starter</artifactId>
-            <version>2.2.4</version>
+            <artifactId>azure-active-directory-b2c-spring-boot-starter</artifactId>
+            <version>2.3.1</version>
         </dependency>
         <!-- Generated -->
         <dependency>
@@ -491,8 +491,8 @@
                         <mainClass>${start-class}</mainClass>
                         <fork>true</fork>
                         <!--
-                        Enable the line below to have remote debugging of your application on port 5005
-                        <jvmArguments>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005</jvmArguments>
+                        Enable the line below to have remote debugging of your application on port 8000
+                        <jvmArguments>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=8000</jvmArguments>
                         -->
                     </configuration>
                 </plugin>
