--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -62,6 +62,18 @@ spring:
   thymeleaf:
     cache: false
 
+azure:
+  activedirectory:
+    b2c:
+      tenant: tableofprizes
+      oidc-enabled: true
+      client-id: ${OAUTH_CLIENTID}
+      client-secret: ${OAUTH_CLIENTSECRET}
+      reply-url: http://localhost:8080/login/oauth2/code
+      logout-success-url: http://localhost:8080/
+      user-flows:
+        sign-up-or-sign-in: B2C_1_signupsignin
+
 server:
   port: 8080
 
