--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,8 @@ Desktop.ini
 # ESLint
 ######################
 .eslintcache
+
+######################
+# Custom
+######################
+.h2.server.properties
