--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -6,7 +6,7 @@
     },
     "jhipsterVersion": "6.9.0",
     "applicationType": "monolith",
-    "baseName": "tableofprizes",
+    "baseName": "tableOfPrizes",
     "packageName": "com.fokkog",
     "packageFolder": "com/fokkog",
     "serverPort": "8080",
@@ -37,6 +37,7 @@
     "enableTranslation": true,
     "nativeLanguage": "nl",
     "languages": ["nl", "en"],
-    "blueprints": []
+    "blueprints": [],
+    "lastLiquibaseTimestamp": 1591526760000
   }
 }
