--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         node-version: 12
     - id: get-npm-cache
       run: |
-        echo '::set-output name=dir::$(npm config get cache)'
+        echo "::set-output name=dir::$(npm config get cache)"
     - uses: actions/cache@v2
       with:
         path: ${{ steps.get-npm-cache.outputs.dir }}
