Add license info

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Table Of Prizes",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "Apache-2.0",
   "cacheDirectories": [
     "node_modules"
   ],
